Fixed dark mode

--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -23,7 +23,6 @@ body {
     border: 0 none;
     margin: 0;
     padding: 0;
-    color: $font-color;
 }
 
 
@@ -85,7 +84,7 @@ li {
   
 li a {
     display: block;
-    color: $font-color;
+    color: #fff;
     text-align: center;
     padding: 15px;
     text-decoration: none;
@@ -172,7 +171,6 @@ h6 {
 
 img {
     max-width: 100%;
-    filter: opacity(75%);
 }
 
 .icon {
